--- a/src/components/forms/FormInput.astro
+++ b/src/components/forms/FormInput.astro
@@ -45,7 +45,7 @@ const {
     }`}
   />
   {error && (
-    <p id={`${id}-error`} class="mt-1 text-sm text-red-600" role="alert">
+    <p id={`${id}-error`} class="mt-1 text-sm text-red-600 break-words" role="alert">
       {error}
     </p>
   )}
