--- a/src/components/forms/ContactForm.astro
+++ b/src/components/forms/ContactForm.astro
@@ -89,7 +89,7 @@ const {
   }
   
   .contact-form-section .border-heading-subheading {
-    border-color: #A88B4A;
+    border-color: #8C733D;
   }
 </style>
 
