--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -45,7 +45,7 @@ const footerNavigation = siteSettings?.footerNavigation || [];
     <meta name="generator" content={Astro.generator} />
     <title>{title} | {siteTitle}</title>
   </head>
-  <body>
+  <body class="bg-white">
     {/* <BreakpointIndicator /> */}
     <a
       href="#main-content"
