--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
 import SectionRenderer from '../components/SectionRenderer.astro';
-import { getCollection, type CollectionEntry } from 'astro:content';
+import { getCollection, type CollectionEntry, render } from 'astro:content';
 import { getSlugFromEntry, findPageBySlug } from '../utils/content';
 
 const pages = await getCollection('pages');
@@ -11,7 +11,7 @@ if (!homePage) {
   return Astro.redirect('/404');
 }
 
-const { Content } = await homePage.render();
+const { Content } = await render(homePage);
 const title = homePage.data.seoTitle || homePage.data.title;
 const description = homePage.data.seoDescription || '';
 
